--- a/colorswitcher.html
+++ b/colorswitcher.html
@@ -55,8 +55,12 @@
             {
                 body_element.style = "background-color:purple";
             }
-
+            else if (random_color == 5)
+            {
+                body_element.style = "background-color:violet";
+            }
         }
+
 
         let random = document.getElementById("random");
         random.addEventListener("click", switchToRandom);
